@@ -12,11 +12,10 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclPanic.c,v 1.16 2010/12/13 13:57:58 nijtmans Exp $
+ * RCS: @(#) $Id: tclPanic.c,v 1.17 2010/12/15 14:03:52 nijtmans Exp $
  */
 
 #include "tclInt.h"
-#undef Tcl_Panic
 
 /*
  * The panicProc variable contains a pointer to an application specific panic
@@ -92,17 +91,7 @@ Tcl_PanicVA(
 	fflush(stderr);
     }
     /* In case the users panic proc does not abort, we do it here */
-#ifdef __GNUC__
-    __builtin_trap();
-#endif
-#ifdef _WIN32
-#   ifdef _MSC_VER
-	DebugBreak();
-#   endif
-    ExitProcess(1);
-#else
     abort();
-#endif
 }
 
 /*
